# telegram-cron-rust

./: Cargo.toml  LICENSE  README.md  config.yaml  cron-notifier.service  install.sh
scripts/: backup_status.py  disk_usage.sh  health_check.sh  magento_admin.py  morning_calendar.py  paramotor.py  ssl_check.sh  weather.py
src/: config.rs  job.rs  main.rs  scheduler.rs
src/telegram/: bot.rs  client.rs  mod.rs
