[package]
name = "telegram-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Cron expression parsing
cron = "0.12"

# HTTP client for Telegram (minimal, no async runtime needed via ureq)
ureq = { version = "2", features = ["json"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# inotify — kernel file-change notifications (Linux only, no async needed)
inotify = { version = "0.10", default-features = false }
