[package]
name = "telegram-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Cron expression parsing
cron = "0.12"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
inotify = { version = "0.10", default-features = false }
threadpool = "1.8"
once_cell = "1.19"
wait-timeout = "0.2"
